--- a/index.html
+++ b/index.html
@@ -20,6 +20,41 @@
     ==========
      -->
     
+     <nav id="nav"  class="nav">
+        <!-- nav center -->
+          <div class="section-center nav-center">
+            <!-- nav Header -->
+            <div class="nav-header">
+              <!-- logo -->
+              <h1 class="logo-1"> bangaya <span>Diall</span></h1>
+              <!-- nav toggle -->
+                <button class="nav-btn" id="nav-btn">
+                   <i class="fas fa-bars"></i>
+                </button>
+            </div>
+            <!-- end of nav header -->
+             <!-- nav links -->
+              <ul class="nav-links">
+                <li>
+                  <a href="index.html">home</a>
+                </li>
+
+                <li>
+                  <a href="about.html">about</a>
+                </li>
+
+                <li>
+                  <a href="projects.html">projects</a>
+                </li>
+
+                <li>
+                  <a href="contact.html">contact</a>
+                </li>
+              </ul>
+              <!-- end of nav links -->
+          </div>
+         <!-- end of nav center -->
+     </nav>
 
     <!-- end of navbar -->
     <!-- sidebar -->
