the nav bar style on the big screen and small screen

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     
      <nav id="nav"  class="nav">
         <!-- nav center -->
-          <div class="section-center nav-center">
+          <div class="nav-center">
             <!-- nav Header -->
             <div class="nav-header">
               <!-- logo -->
-              <h1 class="logo-1"> bangaya <span>Diall</span></h1>
+              <h1 class="logo-1"> bangaya<span>Diall</span></h1>
               <!-- nav toggle -->
                 <button class="nav-btn" id="nav-btn">
                    <i class="fas fa-bars"></i>
